--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -13,11 +13,16 @@ layout: default
             class="fw-bold border-bottom pb-2 mb-3 d-flex justify-content-between"
           >
             {% assign _tab_title = page.title %} {% if _tab_title == nil or _tab_title == empty %}
-            {% assign _tab_title = 'Untitle' %} {% endif %}
+            {% assign _tab_title = 'Untitled' %} {% endif %}
             <div class="title">{{ _tab_title }}</div>
           </div>
+          <!--
           {% capture _toc %}{% include_relative {{ page.path }} %}{% endcapture %}
           {{ _toc | markdownify }}
+          -->
+
+          <!-- ✅ Render the page/post content directly -->
+          {{ content }}
         </div>
       </div>
       <!-- comments -->
