--- a/_includes/tag-cloud.html
+++ b/_includes/tag-cloud.html
@@ -7,7 +7,12 @@
   {% assign tags = site.tags | sort_by: "last" | reverse %}
   {% for tag in tags %}
     {% capture name %}{{ tag | first }}{% endcapture %}
-    {% capture posts_count %}{{ tag | last | size }}{% endcapture %}
+    {% capture posts_count_str %}{{ tag | last | size }}{% endcapture %}
+
+    {% comment %}
+      Convert post count to a number for proper comparison
+    {% endcomment %}
+    {% assign posts_count = posts_count_str | plus: 0 %}
 
     {% comment %}
       Calculate a 'weight' or font size based on post count.
