--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,6 @@
+/* Message types - log levels */
+@import url("/assets/css/msg-types.css");
+
 /* Center ALL Chirpy preview images 
   .post-img img {
     display: block;
