--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,9 @@
 /* Message types - log levels */
 @import url("/assets/css/msg-types.css");
 
+/* Message badges - GitHub style */
+@import url("/assets/css/badges.css");
+
 /* Center ALL Chirpy preview images 
   .post-img img {
     display: block;
